main.css
.white-div{
    background-color: #FBF7F5;
    color: black;
    text-align: center;
}

a.anchor {
    display: block;
    position: relative;
    top: -6%;
    visibility: hidden;
}
.about-img{
    margin: 10% 5%;
    width: 90%;
    float: left;
}


body{
    background-color: #3c3c3d;
    color: white;
    font-family: exo-light;
    margin: 0;
    padding: 0;
}

.content{
    max-width: 1000px;
    margin: 0 auto;
    display: inline-block;
}

.edu-img{  
    margin: 0 0 3% 0; 
    width: 10%;
    text-align: justify;
    display: inline-block;
    overflow: auto;
}

.edu-img img{
    width: 100%;
}

.edu-info{
    padding-top:0;
    width: 80%;
    text-align: justify;
    float: left;
}

.edu-text{
    width: 100%;
    float: left;
}

.education-div{
    height: 40%;
    background-image: url(brggarden.jpg);
    background-size: cover;
    background-position: center;
    text-align: center;
}

/* make keyframes that tell the start state and the end state of our object */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.fade-in {
  opacity:0;  /* make things invisible upon start */
  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;

  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
  -moz-animation-fill-mode:forwards;
  animation-fill-mode:forwards;

  -webkit-animation-duration:1s;
  -moz-animation-duration:1s;
  animation-duration:1s;

  -webkit-animation-delay: 0.2s;
  -moz-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.first-img{
    border-radius: 50%;
    width: 100%;
    margin-top: 25%;
    margin-left: auto;
    margin-right: auto;
}

a{
    color: white;
    text-decoration: none;
}

.footer{
    position: relative;
}

.footer-content{
    display: inline-block;
    position: absolute;
    left: 0%;
    right:0%;
    text-align: center;
}

.footer-content img{
    margin: 1%;
    width: 50px;
}

.footer p{
    display: inline-block;
    position: absolute;
    left: 0px;
    margin: 2%;
    max-width: 30%;
}

.header-div{
    width: 410px;
    margin: auto;
    font-size: 50px;
}

.hero-img{
    height: 100%;
    max-height: 1000px;
    background-image: url(Website-Design-Background.jpg);
    background-size: cover; 
}

.hidden-header{
    float: left;
    padding: 1% 0;
    margin-left: 10%;
    font-size: 30px;
    color: white;
}

#hidden-navbar{
    display: none;
    width: 100%;
    position: fixed;
    z-index: 99;
    top: 0;
    height: auto;
    max-height: 6%;
    background: #3c3c3d;
}

.hidden-nav-item{
    color: white;
    text-decoration: none;
    width: auto;
    font-size: 15px;
    padding: 1% 3%;
    border-radius: 5px;
    float: right;
}

.dropdown-item{
    margin-left: 5%;
    padding: 1%;
}

.hidden-nav-item:hover{    
    text-decoration: underline;
}

html{
    scroll-behavior: smooth;
    margin: 0;
    padding: 0;
}



.img-div{
    width: 25%;
    margin: auto;
}

.info{
    width: 65%;
    text-align: justify;
    display: inline-block;
    overflow: auto;
}

.info p{
    padding: 5% 0;
}

.mySlides{
    display: none;
}

.mySlides img{
    height: 60%;
}

#navbar{
    width: 460px;
    margin: auto;
    margin-top: 20px;
}

.navbar-burger{
    display: none;  
    background: none;
    border-style: none;
    margin: 1%;
    margin-right: 5%;
    width: 100%;
    float: right;
    outline: none;
}

.navbar-burger:hover{
    cursor: pointer;
}

.burger-line{
    border-style: solid;
    border-color: white;
    margin: 30% 0;
    border-width: 3px;
    border-radius: 2%;
    width: 100%;
}


.nav-item{
    color: white;
    text-decoration: none;
    width: 24%;
    font-size: 18px;
    padding: 1% 2%;
    border-radius: 5px;
    
}

.nav-item:hover{    
    text-decoration: underline;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.text-header-right{
    text-align: right;
    width: 100%;
    margin: 0;
    padding: 2% 0% 2% 0;
}

.text-header-left{
    float: left;
    width: 100%;
}

.text-about-img{
    width: 33%;
    float: left;
}
.text-img{
    width: 19%;
    float: left;
}

.work-img{
    margin: 5% 5% 10%  5%;
    width: 90%;
    float: left;
}

.portfolio{
    height: 55%;
    display: block;
    background-color: black;
    text-align: center;
    background-image: url(code.png);
    background-position: 1400px 0;

}

.projects{
    height: 90%;
    width: 90%;
    margin: auto;
}

.project{
    border-style: solid;
    border-radius: 10px;
    border-width: 1px;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    height: 50%;
    width: 80%;
}

.project-btn{
    background-color: #3c3c3d;
    color: white;
    text-decoration: none;
    border-style: none;
    padding: 2%;
    border-radius: 5px;
    border-width: 0.5px;
}

.project-btn:hover{
    background-color: #383838;
}

.proj-description{
    margin: 4%;
}

slider {
    display: block;
    width: 100%;
    height: 100%;
    background-color: #1f1f1f;
    overflow: hidden;
    position: absolute;
}

slider > * {
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    background: #1f1f1f;
    animation: slide 12s infinite;
    overflow: hidden;
}

slide:nth-child(1){
    left: 0%;
    animation-delay: -1s;
}
slide:nth-child(2){
    animation-delay: 2s;
}

slide:nth-child(3){
    animation-delay: 5s;
}

slide:nth-child(4){
    left: 0%;
    animation-delay: 8s;
}

slide p {
    font-family: Comfortaa;
    font-size: 70px;
    text-align: center;
    display: inline-block;
    width: 100%;
    margin-top: 340px;
    color: #fff;
}

@keyframes slide {
    0% { left: 100%; width: 100%; }
    5% { left: 0%; }
    25% { left: 0%; }
    30% { left: -100%; width: 100%; }
    30.0001% { left: -100%; width: 0%; }
    100% { left: 100%; width: 0%; }
}

@font-face{
    font-family: exo-light;
    src: url(Exo-Light.ttf)
}


/* Slideshow container */
.slideshow-container {
    width: 920px;
    position: relative;
    margin: auto;
  }
  
  /* Next & previous buttons */
  .prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
  }
  
  /* Position the "next button" to the right */
  .next {
    right: 0;
    border-radius: 3px 0 0 3px;
  }

  .prev {
    left: 0;
    border-radius: 3px 0 0 3px;
  }
  
  /* On hover, add a black background color with a little bit see-through */
  .prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
  }
  
  /* Caption text */
  .text {
    color: #f2f2f2;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
  }
  
  /* Number text (1/3 etc) */
  .numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
  }
  
  /* The dots/bullets/indicators */
  .dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
  }
  
  .active, .dot:hover {
    background-color: #717171;
  }
  
  /* Fading animation */
  .fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
  }
  
  @-webkit-keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
  }
  
  @keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
  }

/* The container <div> - needed to position the dropdown content */
.dropdown {
    display: none;
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    background-color: #3c3c3d;
    width: 100%;
    height: auto;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  }
  
  /* Links inside the dropdown */
  .dropdown-content a {
    color: white;
    width: 90%;
    text-decoration: none;
    display: block;
  }
  
  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
  .show {display:block;}
  
@media screen and (max-width: 1000px) {

    body{
        font-size: calc(1.5vw + 1.5vh);
    }


    .hero-img{
        height: auto ;
    }
    .work-img{
        display: none;
    }

    .text-header-right{
        text-align: center;
    }
    .content{
        width: 90%;
    }

    .img-div{
        padding: 5%;
        width: 90%;
        text-align: center;
        height: auto;
    }

    .first-img{
        width: 50%;
        padding: 10%;
        margin-left: auto;
        margin-right: auto;
    }

    .education-div{
        height: auto;
        padding: 4%;
    }

    .portfolio{
        height: 50%;
        font-size: 18px;
    }

    .project{
        height: 60%;
    }

    .white-div{
        padding: 4%;
    }

    .info{
        width: 100%;
    }

    .edu-info{
        width: 100%;
        text-align: center;
    }

    .slideshow-container{
        width: 100%;
    }

    .proj-description{
        display: none;
    }

    .footer p{
        display: none;
    }

    .footer-content img{
        margin: 1% 3%;
    }

    .portfolio h1{
        font-size: 450%;
    }

    .project h4{
        font-size: 300%;
    }

    .project h5{
        font-size: 200%;
    }

    .project-btn{
        font-size: 200%;
        position: fixed;
        left: 50%;
        bottom: 5%;
        transform: translate(-50%, -50%);
        margin: 0 auto;
    }
}

.mobile-navbar{
    display: none;
    position: fixed;
    background-color: #3c3c3d;
    height: auto;
    max-height: 12%;
    width: 100%;
    z-index: 100;
}

@media screen and (max-width: 980px) {

    .header-div{
        display: none;
    }

    .mobile-navbar{
        display: block;
        
    }
    #navbar{
        display: none;
    }

    #hidden-navbar{
        display: none;        
    }

    .navbar-burger{
        display: block;
    }
    .dropdown{
        display: block;
        float: right;
        width: 10%;
        margin: auto;
        padding: 3%;
    }

    .hidden-nav-item{
        display: none;
    }

    .hidden-header{
        font-size: calc(3vw + 3vh);
        margin: 2% 1%;
        max-width: 80%;

    }

    ,
}

  /* On smaller screens, decrease text size */
  @media only screen and (max-width: 300px) {
    .prev, .next,.text {font-size: 11px}
  }

